Fix header and footer text alignments

--- a/styles/main.pcss
+++ b/styles/main.pcss
@@ -1,38 +1,46 @@
 @import 'projects.css';
 
 body {
-	margin: 1em 1em 2em;
+	margin: 1em;
 	font-family: sans-serif;
 
-	& > main {
+	.container {
 		max-width: 700px;
 		margin: 0 auto;
+	}
 
-		h2 {
-			font-size: 1.7em;
-		}
+	h2 {
+		font-size: 1.7em;
+	}
 
-		h3 {
-			font-size: 1.4em;
-		}
+	h3 {
+		font-size: 1.4em;
+	}
 
-		p {
-			margin: 0.7em 0;
-			line-height: 1.5em;
-		}
+	p {
+		margin: 0.7em 0;
+		line-height: 1.5em;
+	}
 
-		a {
-			color: mediumblue;
-		}
+	a {
+		color: mediumblue;
+	}
 
-		code {
-			padding: 0.25em;
-			background: #e5e5e5;
-			border-radius: 3px;
-		}
+	code {
+		padding: 0.25em;
+		background: #e5e5e5;
+		border-radius: 3px;
+	}
 
-		ul > li {
-			line-height: 1.4em;
-		}
+	ul > li {
+		line-height: 1.4em;
+	}
+
+	> main {
+		margin-bottom: 2em;
+	}
+
+	> footer {
+		text-align: center;
 	}
 }
